--- a/breast_cancer_histopathology/requirements.txt
+++ b/breast_cancer_histopathology/requirements.txt
@@ -1,293 +1,297 @@
 absl-py==0.11.0
-aiohttp @ file:///tmp/build/80754af9/aiohttp_1602530305083/work
+aiohttp==3.6.3
 alabaster==0.7.12
 anaconda-client==1.7.2
 anaconda-project==0.8.3
 argh==0.26.2
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1596828452693/work
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///tmp/build/80754af9/astroid_1592495881661/work
+argon2-cffi==20.1.0
+asn1crypto==1.4.0
+astroid==2.4.2
 astropy==4.0.2
 async-generator==1.10
 async-timeout==3.0.1
 atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1600298409949/work
+attrs==20.2.0
 autograd==1.3
-autograd-gamma @ file:///home/conda/feedstock_root/build_artifacts/autograd-gamma_1602812384676/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
+autograd-gamma==0.5.0
+autopep8==1.5.4
 Babel==2.8.0
 backcall==0.2.0
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-bitarray @ file:///tmp/build/80754af9/bitarray_1603210346331/work
+beautifulsoup4==4.9.3
+bitarray==1.6.0
 bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+bleach==3.2.1
 blinker==1.4
 blis==0.4.1
-bokeh @ file:///tmp/build/80754af9/bokeh_1603297847301/work
+bokeh==2.2.3
 boto==2.49.0
 Bottleneck==1.3.2
 brotlipy==0.7.0
 cachetools==4.1.1
 catalogue==1.0.0
-certifi==2020.12.5
-cffi @ file:///tmp/build/80754af9/cffi_1600699180754/work
+certifi==2021.10.8
+cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
+cloudpickle==1.6.0
 clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
+colorama==0.4.4
 comet-ml==3.2.5
 configobj==5.0.6
 configparser==5.0.2
 contextlib2==0.6.0.post1
-cryptography @ file:///tmp/build/80754af9/cryptography_1601046817403/work
+cryptography==3.1.1
 cycler==0.10.0
 cymem==2.0.3
-Cython @ file:///tmp/build/80754af9/cython_1594831564311/work
+Cython==0.29.21
 cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
+dask==2.30.0
 dataclasses==0.6
 decorator==4.4.2
 defusedxml==0.6.0
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distributed @ file:///tmp/build/80754af9/distributed_1602083907176/work
+diff-match-patch==20200713
+distributed==2.30.0
 docker-pycreds==0.4.0
 docutils==0.16
 dulwich==0.20.11
+editdistance==0.5.3
 entrypoints==0.3
 et-xmlfile==1.0.1
 everett==1.0.3
-fastai @ file:///home/jhoward/anaconda3/conda-bld/fastai_1604357760344/work
+fastai==2.1.3
 fastcache==1.1.0
-fastcore @ file:///home/jhoward/anaconda3/conda-bld/fastcore_1604204216641/work
-fastprogress @ file:///home/jhoward/anaconda3/conda-bld/fastprogress_1597927594295/work
+fastcore==1.3.1
+fastprogress==1.0.0
 filelock==3.0.12
-flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work
+flake8==3.8.4
 Flask==1.1.2
 fsspec==0.8.4
 future==0.18.2
-gevent @ file:///tmp/build/80754af9/gevent_1601397565838/work
+gevent==20.9.0
 gitdb==4.0.7
 GitPython==3.1.24
 glob2==0.7
 gmpy2==2.0.8
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
-greenlet @ file:///tmp/build/80754af9/greenlet_1600873995270/work
+greenlet==0.4.17
 grpcio==1.33.2
 h5py==2.10.0
 HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
+html5lib==1.1
+idna==2.10
+imageio==2.9.0
 imagesize==1.2.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work
+importlib-metadata==2.0.0
+iniconfig==1.1.1
 install==1.3.4
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
+intervaltree==3.1.0
 ipdb==0.13.9
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206598566/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///tmp/build/80754af9/ipython_1604101195213/work
+ipykernel==5.3.4
+ipython==7.19.0
 ipython-genutils==0.2.0
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
-isort @ file:///tmp/build/80754af9/isort_1602603989581/work
+ipywidgets==7.5.1
+isort==5.6.4
 itsdangerous==1.1.0
 jdcal==1.4.1
-jedi @ file:///tmp/build/80754af9/jedi_1592841891421/work
+jedi==0.17.1
 jeepney==0.4.3
 Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+joblib==0.17.0
 json5==0.9.5
 jsonschema==3.0.2
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
+jupyter-client==6.1.7
+jupyter-console==6.2.0
 jupyter-core==4.6.3
 jupyterlab==2.2.6
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
-keyring @ file:///tmp/build/80754af9/keyring_1601490840626/work
-kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1604014532738/work
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
+keyring==21.4.0
+kiwisolver==1.3.0
 lazy-object-proxy==1.4.3
 libarchive-c==2.9
-lifelines @ file:///home/conda/feedstock_root/build_artifacts/lifelines_1607568259806/work
+lifelines==0.25.7
 lightgbm==3.0.0
 llvmlite==0.34.0
 locket==0.2.0
-lxml @ file:///tmp/build/80754af9/lxml_1603216287147/work
+lxml==4.6.1
 Markdown==3.3.3
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1594371495811/work
-matplotlib @ file:///tmp/build/80754af9/matplotlib-base_1603376012865/work
+MarkupSafe==1.1.1
+matplotlib==3.3.2
 mccabe==0.6.1
-mistune @ file:///tmp/build/80754af9/mistune_1594373098390/work
+mistune==0.8.4
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 mock==4.0.2
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1598884071673/work
+more-itertools==8.5.0
 mpmath==1.1.0
 msgpack==1.0.0
-multidict @ file:///tmp/build/80754af9/multidict_1600456400975/work
+multidict==4.7.6
 multipledispatch==0.6.0
 murmurhash==1.0.2
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914821128/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.1
 netifaces==0.10.9
-networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-nose @ file:///tmp/build/80754af9/nose_1594377616924/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1602720128568/work
-numba @ file:///tmp/build/80754af9/numba_1600102479638/work
+networkx==2.5
+nltk==3.5
+nose==1.3.7
+notebook==6.1.4
+numba==0.51.2
 numexpr==2.7.1
 numpy==1.19.4
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
+numpydoc==1.1.0
 nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
 olefile==0.46
 opencv-python==4.4.0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1598113097404/work
+openpyxl==3.0.5
 opt-einsum==3.3.0
 packaging==20.4
 pandas==1.1.4
 pandocfilters==1.4.2
 parso==0.7.0
 partd==1.1.0
-path @ file:///tmp/build/80754af9/path_1596907209691/work
-pathlib2 @ file:///tmp/build/80754af9/pathlib2_1594380969706/work
+path==15.0.0
+pathlib2==2.3.5
 pathtools==0.1.2
 patsy==0.5.1
 pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1594383317248/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1594384075987/work
-Pillow @ file:///tmp/build/80754af9/pillow_1603822253009/work
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.0.1
+pip==21.0.1
 pkginfo==1.6.0
-plac @ file:///tmp/build/80754af9/plac_1594261912720/work
+plac==0.9.6
 pluggy==0.13.1
 ply==3.11
 preshed==3.0.2
 prometheus-client==0.8.0
 promise==2.3
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+prompt-toolkit==3.0.8
 protobuf==3.13.0
-psutil @ file:///tmp/build/80754af9/psutil_1598370249042/work
+psutil==5.7.2
 ptyprocess==0.6.0
-py @ file:///tmp/build/80754af9/py_1593446248552/work
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycparser==2.20
 pycrypto==2.6.1
 pycurl==7.43.0.6
-pydicom @ file:///home/conda/feedstock_root/build_artifacts/pydicom_1604367895328/work
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
+pydicom==2.1.0
+pydocstyle==5.1.1
 pyflakes==2.2.0
-Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
+Pygments==2.7.2
 PyJWT==1.7.1
-pylint @ file:///tmp/build/80754af9/pylint_1598624038450/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pylint==2.6.0
+pyodbc==4.0.0-unsupported
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141707582/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1594394576006/work
+pyrsistent==0.17.3
+PySocks==1.7.1
 pytest==0.0.0
 python-dateutil==2.8.1
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
+python-jsonrpc-server==0.4.0
+python-language-server==0.35.1
 pytorch-lightning==1.1.8
-pytorch-lightning-bolts @ git+https://github.com/PytorchLightning/pytorch-lightning-bolts.git@1bec12200ff60b9b58277b40d9232933e1aa9dbe
+pytorch-lightning-bolts==0.3.0
 pytz==2020.1
-PyWavelets @ file:///tmp/build/80754af9/pywavelets_1601658308664/work
-pyxdg @ file:///tmp/build/80754af9/pyxdg_1603822279816/work
+PyWavelets==1.1.1
+pyxdg==0.27
 PyYAML==5.3.1
 pyzmq==19.0.2
 QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
+QtAwesome==1.0.1
+qtconsole==4.7.7
 QtPy==1.9.0
-regex @ file:///tmp/build/80754af9/regex_1602786662515/work
+regex==2020.10.15
 requests==2.24.0
 requests-oauthlib==1.3.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
+rope==0.18.0
 rsa==4.6
 Rtree==0.9.4
 ruamel-yaml==0.15.87
 scikit-image==0.17.2
 scikit-learn==0.20.2
-scipy @ file:///tmp/build/80754af9/scipy_1597686620742/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-SecretStorage @ file:///tmp/build/80754af9/secretstorage_1594419219833/work
+scipy==1.5.2
+seaborn==0.11.0
+SecretStorage==3.1.2
 Send2Trash==1.5.0
 sentry-sdk==1.3.1
+setuptools==50.3.2
 shortuuid==1.0.1
 simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work
+singledispatch==3.4.0.3
 six==1.15.0
 smmap==4.0.0
 snowballstemmer==2.0.0
 sortedcollections==1.2.1
 sortedcontainers==2.2.2
 soupsieve==2.0.1
-spacy @ file:///tmp/build/80754af9/spacy_1600554232810/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
+spacy==2.3.2
+Sphinx==3.2.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///tmp/build/80754af9/spyder_1599056984254/work
-spyder-kernels @ file:///tmp/build/80754af9/spyder-kernels_1599056754119/work
-SQLAlchemy @ file:///tmp/build/80754af9/sqlalchemy_1603810416853/work
+sphinxcontrib-websupport==1.2.4
+spyder==4.1.5
+spyder-kernels==1.9.4
+SQLAlchemy==1.3.20
 srsly==1.0.2
-statsmodels @ file:///tmp/build/80754af9/statsmodels_1602280183240/work
+statsmodels==0.12.0
 subprocess32==3.5.4
-sympy @ file:///tmp/build/80754af9/sympy_1597083144364/work
+sympy==1.6.2
 tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
+tblib==1.7.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
-thinc @ file:///tmp/build/80754af9/thinc_1594251958630/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+thinc==7.4.1
+threadpoolctl==2.1.0
 tifffile==2020.10.1
 toml==0.10.2
-toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
+toolz==0.11.1
 torch==1.7.0
 torchaudio==0.7.0a0+ac17b64
 torchmetrics==0.2.0
 torchvision==0.8.1
 tornado==6.0.4
 tqdm==4.51.0
-traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
+traitlets==5.0.5
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
-ujson @ file:///tmp/build/80754af9/ujson_1602523313803/work
+ujson==4.0.1
 unicodecsv==0.14.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+urllib3==1.25.11
 wandb==0.12.2
-wasabi @ file:///tmp/build/80754af9/wasabi_1599244993840/work
-watchdog @ file:///tmp/build/80754af9/watchdog_1593447306189/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+wasabi==0.8.0
+watchdog==0.10.3
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client @ file:///tmp/build/80754af9/websocket-client_1602006590740/work
+websocket-client==0.57.0
 Werkzeug==1.0.1
+wheel==0.35.1
 widgetsnbextension==3.5.1
 wrapt==1.11.2
 wurlitzer==2.0.1
 xlrd==1.2.0
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work
+XlsxWriter==1.3.7
 xlwt==1.3.0
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-yarl==1.5.1
+yapf==0.30.0
+yarl==1.6.3
 yaspin==2.1.0
 zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+zipp==3.4.0
 zope.event==4.5.0
-zope.interface @ file:///tmp/build/80754af9/zope.interface_1602002440259/work
+zope.interface==5.1.2
